@@ -2,6 +2,9 @@ python-nbxmpp (0.6.7-0.1) unstable; urgency=medium
 
   * New upstream version
   * Bump standards version
+  * Merge copyright, rules and watch with upstream package
+  * Set Orig-Maintainer: Debian XMPP Maintainers
+    <pkg-xmpp-devel@lists.alioth.debian.org>
 
  -- Mathias Ertl <mati@jabber.at>  Sat, 08 Sep 2018 11:49:08 +0200
 
